# CourseWork-Poker

./: CMakeLists.txt  README.md  main.cpp
Classes/: Card.cpp  Card.h  Combination.cpp  Combination.h  Deck.cpp  Deck.h  Game.cpp  Game.h  GameManager.cpp  GameManager.h  Hand.cpp  Hand.h  Player.cpp  Player.h  PlayerComputer.cpp  PlayerComputer.h  PlayerHuman.cpp  PlayerHuman.h  Table.cpp  Table.h
